--- a/login-page/src/styling/main.css
+++ b/login-page/src/styling/main.css
@@ -11,7 +11,7 @@
 }
 
 .menu-icon {
-  position: absolute;
+  position: fixed;
   top: 10px;
   left:10px;
   font-size: 24px;
@@ -20,7 +20,7 @@
 }
 
 .utilities-menu {
-  position: absolute;
+  position: fixed;
   top: 50px;
   left: 10px; 
   width: 150px;
