--- a/login-page/src/styling/slider.css
+++ b/login-page/src/styling/slider.css
@@ -1,57 +1,71 @@
-/* Ensure the slider-container is properly styled */
-.slider-container {
+.slideshow-container {
   position: relative;
+  height: 300px;
   width: 100%;
-  max-width: 800px;
+  max-width: 600px; /* Adjusted to make the overall container smaller */
   margin: auto;
   overflow: hidden;
+}
+
+.image-text-container {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  height: 100%; /* Adjust the height to make the container smaller */
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.text-side {
+  flex: 1;
+  padding: 10px; /* Reduced padding to fit smaller container */
+  background-color: rgb(210,210,210);
+}
+
+.image-side {
+  flex: 1;
   display: flex;
   align-items: center;
+  justify-content: center;
+  background-color: rgb(210,210,210);
+  overflow: hidden; /* Ensures the image doesn't overflow its container */
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 
-/* General styling for the image-text-container */
-.image-text-container {
-  width: 100%;
-  height: 250px;
-  margin-bottom: 20px;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: opacity 0.9s ease-in-out;
-  display: flex; /* Always use flex for proper layout */
-  flex-shrink: 0; /* Prevent shrinking when slider transitions */
+.image-side img {
+  max-width: 100%;
+  max-height: 100%; /* Ensure the image fits within the container */
+  height: auto; 
+  width: auto;
+  border-radius: 8px;
 }
 
-/* Styles for active and inactive slides */
-.image-text-container.active {
-  opacity: 1;
-}
 
-.image-text-container:not(.active) {
-  opacity: 0;
-}
-
-/* Arrow buttons styling */
-.slider-arrow {
-  align-items: center;
-  position: relative;
+.nav {
+  position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  font-size: 30px;
-  color: rgb(210, 210, 210);
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(210,210,210,0.2);
+  border: none;
+  color: rgb(37, 67, 112);
+  font-size: 18px;
   padding: 10px;
-  border-radius: 50%;
   cursor: pointer;
   z-index: 1;
 }
 
-/* Positioning of the left arrow */
-.left-arrow {
-  left: 10px;
-  align-items: center;
+.prev {
+  left: 0;
 }
 
-/* Positioning of the right arrow */
-.right-arrow {
-  right: 10px;
+.next {
+  right: 0;
+}
+h2 {
+  font-size: 20 px;
+  color: rgb(179,179,179);
+}
+
+h1 {
+  color: rgb(37, 67, 112);
 }
