--- a/login-page/src/styling/Login.css
+++ b/login-page/src/styling/Login.css
@@ -4,22 +4,26 @@
   margin: 0;
   padding: 0;
   height: 100vh;
-  width: 100vw;
-  display: flex;
+  width: 100vw;  
+  
+  display: flex; 
   justify-content: center;
-  align-items: flex-start; 
+  align-items: center;
 }
 
 .login-container {
-  text-align: center;
-  margin-top: 5%; 
+  text-align: center; 
   width: 100%;
-  max-width: 300px;
+  max-width: 300px; 
+  padding: 20px;
+  border-radius: 10px; 
 }
 
-h1 {
-  color: rgb(179,179,179);
-  margin-bottom: 20px;
+
+.h2 {
+  color: rgb(179, 179, 179);
+  font-size: 28px; 
+  margin-bottom: 20px; 
 }
 
 .input-group {
@@ -62,10 +66,17 @@ input::placeholder {
 .checkbox-label {
   color: rgb(179,179,179);
   font-size: 18px;
+  justify-content: center;
+  align-items: center;
+
 }
 
-.link-group {
+.link-group1 {
   margin-top: 20px; 
+  margin-bottom: 10px;
+}
+.link-group2 {
+  margin-top: 30px; 
   margin-bottom: 50px;
 }
 
@@ -78,6 +89,10 @@ input::placeholder {
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+}
+
+.login-button:hover {
+  background-color: rgb(179,179,179)
 }
 
 .link {
